fixing hero height bug on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@
 
 body {
     background: #0D0B0C;
+    margin: 0;
 }
 
 h1,h2,h3,h4,h5,h6 {
